text for News Pane version set to 1.1.0 Alpha Q

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -28,7 +28,7 @@ SP.ABOUT.UPDATES_PANE="Version and Updates"
 SP.ABOUT.UD.YOU_ARE_USING="You are currently using SobiPro version <b>%s</b>"
 SP.ABOUT.CREDITS_PANE="Credits"
 SP.ABOUT.LICENSE_PANE="License Conditions"
-SP.ABOUT.NEWS_PANE="Show %s"
+SP.ABOUT.NEWS_PANE="Latest from %s"
 SP.ABOUT.SP_CLUB="The SobiPro Club"
 SP.ABOUT.SP_CLUB_DESC="If you require support and additional applications for your directory the %s is what you are looking for. For a periodic subscription fee the Club Membership grants you access to the documentation, additional applications/extensions and to the SobiPro Club forum."
 SP.ABOUT.SP_CLUB_WEB="%s website"
