(+) System checker added all status messages in en-GB

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -74,6 +74,7 @@ Legend:
    (+) Added full text indexes to fields' data and language table
    (+) Search priority to XML results
    (+) Possibility to define different template methods (see default template) to plug-in an action between (and whilst) submit and save entry actions
+   (+) System checker added all status messages in en-GB
 
    (-) Vehicles template removed; will be a separate template now
    (-) SobiPro Admin Menu Module removed; sections available now on a menu list
