move icons folder to images on update version set to 1.1.0 Alpha R

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -28,7 +28,7 @@ Legend:
 
 
 -------------------
-1.1.0 (Alpha N)
+1.1.0 (Alpha R)
 -------------------
 
    (+) XML based template engine for administrator templates
@@ -123,7 +123,7 @@ Legend:
    (#) Email field data invisible when Data Accelerator is enabled and data has been cached by a bot
    (#) Template installer: complex fields' options are incorrect while installing new section (e.g. selected views in SP-GeoMap field)
    (#) Cache not cleaned after an ACL rule has been saved
-   (#) Empty values for range search passed to the search method ( Issue #806 )
+   (#) Empty values for range search passed to the search method (Issue #806)
 
 
 -------------------
