--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -23,6 +23,17 @@
 ;=========
 ; SobiPro 1.1
 ;=========
+
+SP.CRAWLER.SITE_TITLE="Section Crawler"
+SP.CRAWLER.MENU="Section Crawler"
+SP.TB.START_CRAWL="Crawl"
+SP.TB.RESTART_CRAWL="Clean Cache & Crawl"
+SP.CRAWL_ULR="Parsed URL"
+SP.CRAWL_CODE="Response Code"
+SP.CRAWL_LINKS="Found Links"
+SP.CRAWL_TIME="Request Time"
+
+
 SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
 SP.CATEGORIES_IN_LIST_HEAD="Categories in: var:[category_name]"
 
