--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -24,6 +24,9 @@
 ; SobiPro 1.1
 ;=========
 
+SP.CRAWL_ULR_PARSED_DONE="Done. Parsed %d links"
+SP.CRAWL_ULR_PARSED_WORKING="Working ... Parsed %d from %d sites in this loop"
+
 ; Template texts
 SP.EXTENDED_SEARCH="Extended Search"
 SP.PAYMENT_CHOSEN_FOLLOWING_OPTIONS="You have chosen following non-free options"
