(+) Simple translation method for entries and categories in the administrator panel

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -76,6 +76,7 @@ Legend:
    (+) Possibility to define different template methods (see default template) to plug-in an action between (and whilst) submit and save entry actions
    (+) System checker added all status messages in en-GB
    (+) Section crawler - possibility to trigger complete cache creation
+   (+) Simple translation method for entries and categories in the administrator panel
 
    (-) Vehicles template removed; will be a separate template now
    (-) SobiPro Admin Menu Module removed; sections available now on a menu list
