--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -32,6 +32,7 @@ SP.CRAWL_ULR="Parsed URL"
 SP.CRAWL_CODE="Response Code"
 SP.CRAWL_LINKS="Found Links"
 SP.CRAWL_TIME="Request Time"
+SP.TB.LANGUAGES="Languages"
 
 
 SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
