some text corrections

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,23 +24,9 @@
 ; SobiPro 1.1
 ;=========
 
-SP.CRAWLER.SITE_TITLE="Section Crawler"
-SP.CRAWLER.MENU="Section Crawler"
-SP.TB.START_CRAWL="Crawl"
-SP.TB.RESTART_CRAWL="Clean Cache & Crawl"
-SP.CRAWL_ULR="Parsed URL"
-SP.CRAWL_CODE="Response Code"
-SP.CRAWL_LINKS="Found Links"
-SP.CRAWL_TIME="Request Time"
-SP.TB.LANGUAGES="Languages"
-
-
-SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
-SP.CATEGORIES_IN_LIST_HEAD="Categories in: var:[category_name]"
-
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
-SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
+SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to."
 
 ; General texts
 SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields."
@@ -89,6 +75,7 @@ SP.TB.ACL="Access Control List"
 SP.TB.SAM="Application Manager"
 SP.TB.TEMPLATE="Template Manager"
 SP.TB.REMOVE="Remove"
+SP.TB.LANGUAGES="Language"
 
 ; CPanel
 SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
@@ -211,7 +198,8 @@ SP.FMN.CC_SEARCH_METHOD="Search Method"
 
 ; Category and Entry Manager
 SP.CAT.ENTRIES_LIST_HEAD="Entries in: var:[category_name]"
-SP.CAT.CATEGORY_LIST_HEAD="Categories in: var:[category_name]"
+SP.CATEGORY_LIST_HEADER="Category: var:[category_name]"
+SP.CATEGORIES_IN_LIST_HEAD="Categories in: var:[category_name]"
 SP.CHECKED_OUT="Checked out by %s <br/> until %s"
 SP.ROW_PENDING="Pending<br/>Valid from %s"
 SP.ROW_EXPIRED="Expired<br/>Valid until %s"
@@ -401,6 +389,16 @@ SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
 
 ;; Security
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
+
+;; Crawler
+SP.CRAWLER.SITE_TITLE="Section Crawler"
+SP.CRAWLER.MENU="Section Crawler"
+SP.TB.START_CRAWL="Crawl"
+SP.TB.RESTART_CRAWL="Clean Cache & Crawl"
+SP.CRAWL_ULR="Parsed URL"
+SP.CRAWL_CODE="Response Code"
+SP.CRAWL_LINKS="Found Links"
+SP.CRAWL_TIME="Request Time"
 
 ; Global Configuration
 SP.GBN.CFG.CACHE_HEAD="Optimisation"
