--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -24,10 +24,10 @@
 ; SobiPro 1.1
 ;=========
 
-SP.INFO_DIFFERENT_LANGUAGE="Note: You are editing this %s in '%s' language. Please note that all changes you are going to made going to be stored in this language"
+SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this %s in '%s' language. Please note, that all changes you make will be stored in this language!"
 
-SP.CRAWL_ULR_PARSED_DONE="Done. Parsed %d links"
-SP.CRAWL_ULR_PARSED_WORKING="Working ... Parsed %d from %d sites in this loop"
+SP.CRAWL_ULR_PARSED_DONE="Done. Parsed %d links."
+SP.CRAWL_ULR_PARSED_WORKING="Working... Parsed %d from %d sites in this loop."
 
 ; Template texts
 SP.EXTENDED_SEARCH="Extended Search"
