new language file for system check SobiPro 1.1 Alpha S

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -28,7 +28,7 @@ Legend:
 
 
 -------------------
-1.1.0 (Alpha R)
+1.1.0 (Alpha S)
 -------------------
 
    (+) XML based template engine for administrator templates
