new language file for system check/2

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -24,8 +24,8 @@
 ; SobiPro 1.1
 ;=========
 
-SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE="MySQL views are not available"
-SP.REQ.MYSQL_VIEWS_AVAILABLE="MySQL views are available"
+SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE="1001 MySQL views are not available"
+SP.REQ.MYSQL_VIEWS_AVAILABLE="1002 MySQL views are available"
 SP.REQ.MYSQL_FUNCTIONS_NOT_AVAILABLE="MySQL functions are not available"
 SP.REQ.MYSQL_FUNCTIONS_AVAILABLE="MySQL functions are available"
 SP.REQ.MYSQL_PROCEDURES_NOT_AVAILABLE="MySQL procedures are not available"
@@ -98,3 +98,10 @@ SP.REQ.TIDY_AVAILABLE="Tidy - HTML clean and repair utility available"
 SP.REQ.MYSQL_CACHE_NOT_AVAILABLE="MySQL Query Cache is disabled"
 SP.REQ.MYSQL_CACHE_AVAILABLE="MySQL Query Cache is enabled"
 SP.REQ.MYSQL_CACHE_CANNOT_CHECK="Cannot check if MySQL Query Cache is enabled"
+SP.REQ.PARSE_INI_NOT_AVAILABLE="Configuration Files Parser (INI-Files) is not available"
+SP.REQ.PARSE_INI_AVAILABLE="Configuration Files Parser (INI-Files) is available"
+SP.REQ.SQLITE_AVAILABLE="SQLite support is available"
+SP.REQ.SQLITE_NOT_AVAILABLE="SQLite support is not available but highly recommended"
+SP.REQ.FILTER_AVAILABLE="Filter functions are available"
+SP.REQ.FILTER_NOT_AVAILABLE="Filter functions are not available"
+
