new language file for system check/4

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -24,8 +24,8 @@
 ; SobiPro 1.1
 ;=========
 
-SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE="1001 MySQL views are not available"
-SP.REQ.MYSQL_VIEWS_AVAILABLE="1002 MySQL views are available"
+SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE="MySQL views are not available"
+SP.REQ.MYSQL_VIEWS_AVAILABLE="MySQL views are available"
 SP.REQ.MYSQL_FUNCTIONS_NOT_AVAILABLE="MySQL functions are not available"
 SP.REQ.MYSQL_FUNCTIONS_AVAILABLE="MySQL functions are available"
 SP.REQ.MYSQL_PROCEDURES_NOT_AVAILABLE="MySQL procedures are not available"
