--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -984,6 +984,7 @@ SP.REQ.NOT_RECOMMENDED="Setting is not recommended"
 SP.REQ.DOES_NOT_COMPLY="Does not comply with the requirement"
 SP.REQ.CMS="CMS"
 SP.REQ.CMS_VERSION="CMS Version"
+SP.REQ.WEB_SERVER_VERSION_NAME="Name and Version"
 SP.REQ.FTP_LAYER="FTP Layer"
 SP.REQ.ENCODING="Encoding"
 SP.REQ.WEB_SERVER="Web Server"
