index.html for empty folders added prop set

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -1,4 +1,4 @@
-; @version: $Id: en-GB.com_sobipro.ini 3263 2013-03-06 13:58:52Z Sigrid Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -15,10 +15,10 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; $Date: 2013-03-06 14:58:52 +0100 (Mi, 06 Mrz 2013) $
-; $Revision: 3263 $
-; $Author: Sigrid Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini $
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
 
 ;=========
 ; SobiPro 1.1
