--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -23,13 +23,11 @@
 
 SP.ABOUT.ABOUT_PANE="About SobiPro"
 SP.ABOUT.SP_DESC="SobiPro is a Joomla! component with content construction support, which is mainly designed to be used as a directory component."
-SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by %s and %s"
+SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by %s and %s."
 SP.ABOUT.UPDATES_PANE="Version and Updates"
-SP.ABOUT.UD.YOU_ARE_USING="You are currently using SobiPro version <b>%s</b>"
+SP.ABOUT.UD.YOU_ARE_USING="You are currently using SobiPro version <strong>%s</strong>"
 SP.ABOUT.CREDITS_PANE="Credits"
 SP.ABOUT.LICENSE_PANE="License Conditions"
-SP.ABOUT.NEWS_PANE="Latest from %s"
+SP.ABOUT.NEWS_PANE="News - %s"
 SP.ABOUT.SP_CLUB="The SobiPro Club"
-SP.ABOUT.SP_CLUB_DESC="If you require support and additional applications for your directory the %s is what you are looking for. For a periodic subscription fee the Club Membership grants you access to the documentation, additional applications/extensions and to the SobiPro Club forum."
-SP.ABOUT.SP_CLUB_WEB="%s website"
-SP.ABOUT.SP_FORUM="Sigsiu.NET Club Forum"
+SP.ABOUT.SP_CLUBDESC="If you require support and additional applications for your directory the %s is what you are looking for. For a periodic subscription fee the Club Membership grants you access to the documentation, additional applications/extensions and to the %s."
