--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -33,7 +33,7 @@ SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields."
 SP.META_DATA="Meta Data"
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_POSITION="Position"
-SP.EMN_ORDER_BY="Order by"
+SP.ORDER_BY="Order by"
 SP.SHOW_YES="Show"
 SP.SHOW_NO="Hide"
 SP.ONOFF_YES="On"
@@ -81,10 +81,8 @@ SP.TB.LANGUAGES="Language"
 SP.CPANEL_SYSTEM_STATUS="SobiPro System Status"
 SP.CPANEL_POPULAR_ENTRIES="Popular Entries"
 SP.CPANEL_NEW_ENTRIES="New Entries"
-SP.CPANEL_EXPIRING_SOON="Expiring soon"
 SP.CPANEL_AWAITING_APPROVAL="Awaiting approval"
 SP.CPANEL_REPORTED_ISSUES="Issues found: %d"
-SP.CPANEL_REPORTED_ISSUES_SHOW="Show"
 SP.CPANEL_ISSUES_TYPE="Level"
 SP.CPANEL_ISSUES_SECTION="Section"
 SP.CPANEL_ISSUES_MESSAGE="Message"
@@ -220,7 +218,6 @@ SP.HEADER_ENTRIES_NAME="Entry Name"
 SP.HEADER_ENTRIES_STATE="State"
 SP.HEADER_ENTRIES_APPROVAL="Approval"
 SP.HEADER_FIELD_AUTHOR="Owner"
-SP.EMN_FILTER="Filter..."
 SP.EMN.ORDER_BY_ID_ASC="Id ascending"
 SP.EMN.ORDER_BY_ID_DESC="Id descending"
 SP.EMN.ORDER_BY_NAME_ASC="Name ascending"
@@ -336,8 +333,6 @@ SP.SECN.CFG.ENTRY_TITLE_FIELD="Name Field"
 SP.SECN.CFG.ENTRY_SETTINGS="vCard Settings"
 SP.SECN.CFG.NUMBER_ENTRIES_PAGE="Number per Page"
 SP.SECN.CFG.NUMBER_ENTRIES_LINE="Number per Line"
-SP.SECN.CFG.ORDER_CATEGORIES_BY="Order by"
-SP.SECN.CFG.ORDER_ENTRIES_BY="Order by"
 SP.SECN.CFG.PASS_TO_VCARD="Pass also to vCard Template"
 SP.SECN.CFG.PASS_ENTRY_META_TEMPLATE="Meta Data"
 SP.SECN.CFG.PASS_SEL_CATS_OF_ENTRY_TO_TEMPLATE="Selected Categories of an Entry"
@@ -478,14 +473,6 @@ SP.PERMISSIONS.DELETE_OWN="delete own"
 SP.PERMISSIONS.SEARCH_*="use search function"
 
 
-; seemingly unused
-;;;SP.FMN_ORDER_BY="Order by"
-;SP.FMN.ORDER_BY_SHOWIN_DESC=""
-
-;;SP.SECTION_LIST_TITLE="Section: var:[section_name]"
-
-
-
 ;=========
 ; SobiPro 1.0.4
 ;=========
@@ -503,25 +490,15 @@ SP.TP.DEFAULT_WARN="You are using the default template for this section. This is
 SP.GB.CFG.LANG="Language Settings"
 SP.GB.CFG.MULTILANG="Multi-Language Mode"
 SP.REQ.CURL_NOT_USABLE="CURL not usable. Some functionality will be disturbed."
-SP.CAT.ENTRIES_LIST_FILTER="Filter: "
 
 ;=========
 ; SobiPro 1.0 RC3
 ;=========
-SP.TB.SAVE_AS="Save As"
-SP.TB.DELETE_FILE="Delete File"
-SP.EX.BRWOSE_NOT_INSTALLED="Not Installed"
 SP.EX.BRWOSE_NOT_INSTALLED_EXPL="Application is not installed."
-SP.EX.BRWOSE_INSTALLED="Installed"
 SP.EX.BRWOSE_INSTALLED_EXPL="Application is installed."
-SP.EX.BRWOSE_INSTALLED_UPD="Not up to date"
 SP.EX.BRWOSE_INSTALLED_UPD_EXPL="Application is installed, but a newer version is available."
-SP.EXTENSIONS.HEADER_STATE="State"
 SP.FM.STATE_CHANGED="State of field var:[fid] has been changed. "
 SP.FM.STATE_NOT_CHANGED="State of field var:[fid] cannot be changed. "
-SP.EN.UPDATED_TIME="Last Updated"
-SP.EN.UPDATED_IP="Updated via IP"
-SP.EN.UPDATED_NAME="Updated by"
 SP.TP.DUPLICATED="Template has been duplicated!"
 SP.TP.DO_NOT_REMOVE="Sorry, but the default template cannot be removed."
 SP.TP.REMOVED="Template has been removed!"
@@ -529,8 +506,8 @@ SP.TP.CANNOT_REMOVE="Cannot remove template!"
 SP.TP.MISSING_DEFINITION_FILE="Missing template definition file"
 SP.TP.FILE_SAVED="File has been saved!"
 SP.TP.CANNOT_SAVE="Cannot save file!"
-SP.GB.CFG.INCLUDE_FILES_CACHE="JavaScript and CSS Files Cache"
-SP.GB.CFG.COMPRESS_JS_FILES="JavaScript Files Compression"
+
+;;; XXXX
 
 ;=========
 ; SobiPro 1.0 RC2
@@ -1154,7 +1131,7 @@ SP.EX.PLUGIN STATE_CHANGED="Application state changed"
 ;=========
 ; Fields Manager
 ;=========
-SP.FM.EDIT_FIELD="Edit Field &#34;var:[field]&#34;"
+SP.FM.EDIT_FIELD="Edit field &#34;var:[field]&#34;"
 SP.FM.ADD_NEW="Add New Field"
 SP.FM.FIELD_PARAMETERS="Field Parameters"
 SP.FM.AVAILABLE_IN="Available in"
