--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -22,8 +22,11 @@
 
 
 ;=========
-; Joomla! Menu
+; Joomla! Menu (J 2.5+)
 ;=========
+
+SOBIPRO="SobiPro"
+COM_SOBIPRO="SobiPro"
 
 SP.SOBI_SELECT_ENTRY="Select Entry"
 SP.SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
@@ -43,8 +46,6 @@ SP.TASK_LIST.USER="User Listing"
 SP.TASK_LIST.DATE="Listing by Date"
 SOBI_SELECTED_DATE="Selected Date"
 
-SOBIPRO="SobiPro"
-COM_SOBIPRO="SobiPro"
 JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
 SOBI_SECTION="SobiPro Section, Category or Entry"
 SOBI_SECTION_EXPL="Add a new link to SobiPro Section, Category or Entry"
