--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -507,47 +507,23 @@ SP.TP.MISSING_DEFINITION_FILE="Missing template definition file"
 SP.TP.FILE_SAVED="File has been saved!"
 SP.TP.CANNOT_SAVE="Cannot save file!"
 
-;;; XXXX
-
 ;=========
 ; SobiPro 1.0 RC2
 ;=========
 SP.LANG_INSTALL_NO_CORE="The language package has been installed but there is no Joomla! core package for \"%s\"."
-SP.LANG_INSTALLED="New language package '%s' has been installed"
+SP.LANG_INSTALLED="New language package '%s' has been installed."
 SP.EX.MODULE_TYPE="Joomla! Module"
 SP.EX.LANGUAGE_TYPE="Language"
-SP.CMS_EXT_INSTALLED="Extension (%s) \"%s\" has been installed."
 SP.CMS_EXT_NOT_INSTALLED="Cannot install extension."
 SP.CMS_EXT_REMOVED="Extension \"%s\" has been removed."
 SP.CMS_EXT_NOT_REMOVED="Cannot remove extension \"%s\"."
 SP.ACL.MSG_STATE_CHANGED="Rule(s) state has been changed."
 SP.CMS_SOBIPRO_UPDATE_INSTALLED="SobiPro has been updated to the version %s."
-SP.CATEGORY_CHECKED_OUT="Category is being edited"
-SP.CATEGORY_CHECKED_OUT_BY="This category is being edited by var:[user]"
-SP.SEC.CFG.PARSE_TPL_CONTENT="Parse Template Output"
-SP.EX.UPDATE_TYPE="update"
-SP.TYPE.CATEGORY="category"
-SP.TYPE.ENTRY="entry"
-SP.TYPE.FIELD="field"
-
-; Changed texts - please remove them from below
-SP.ENTRY.UNAPPROVE="Unapprove Entry"
-SP.ENTRY.UNAPPROVE_EXPL="Unapprove selected entries"
-SP.ENTRY.ENABLE_EXPL="Enable selected entries"
-SP.ENTRY.DISABLE_EXPL="Disable selected entries"
-SP.ENTRY.SAVE_ORDER="Save order"
-SP.ENTRY.SAVE_ORDER_EXPL="Save the order entered in the order input boxes"
-SP.ENTRY.HEADER_ORDER_BY_APPROVED="Order by approval state"
-SP.ENTRY.HEADER_TOGGLE="Toggle selected entries"
-SP.ENTRY.ORDER_DOWN_EXPL="Move entry one position down"
-SP.ENTRY.ORDER_UP_EXPL="Move entry one position up"
-SP.CATEGORY.CHECKED_OUT="Category is being edited"
-SP.CATEGORY.CHECKED_OUT_BY="This category is being edited by var:[user]"
-
 
 ;=========
-; Joomla! Menu
+; Joomla! Menu (J 1.5)
 ;=========
+COM_SOBIPRO="SobiPro"
 SOBI_SECTION="SobiPro Section or Category"
 SOBI_SECTION_EXPL="Add a new link to SobiPro Section or Category"
 SOBI_SEARCH="Search Function"
@@ -558,10 +534,6 @@ SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to"
 SOBI_SELECT_CATEGORY="Select Category"
 SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
-SP.SELECT_CATEGORY="Select Category"
-SP.SELECT_SECTION="Select section"
-SP.SECTIONS="Sections"
-COM_SOBIPRO="SobiPro"
 SOBI_USER_LISTING="User Listing"
 SOBI_USER_LISTING_EXPL="List of 'my' entries"
 SOBI_DATE_LISTING="Listing by date"
@@ -570,21 +542,15 @@ SOBI_DATE_LISTING_EXPL="List of entries created within a certain time period"
 ;=========
 ; Adm Menu
 ;=========
+SP.SECTIONS="Sections"
+SP.SELECT_SECTION="Select section"
 SP.AMN.ENT_CAT="Entries & Categories"
 SP.AMN.ADD_ENTRY="Add Entry"
-SP.AMN.ADD_CAT="Add Category"
-SP.AMN.ALL_ENTRIES="All Entries"
-SP.AMN.SEC_CFG="Section Configuration"
-SP.AMN.FIELDS_MAN="Fields Manager"
-SP.AMN.GEN_CFG="General Configuration"
 SP.CPANEL.GCONF="System Settings"
 SP.CPANEL.ACL="Access Control List"
 SP.CPANEL.SAM="Application Manager"
-SP.CPANEL.FILTER="Input Filters"
 SP.CPANEL.TMPL="Template Manager"
-SP.GB.ACL="Access Control List"
 SP.MN.ACL="Rules"
-SP.GB.APPS="Application Manager"
 
 ;=========
 ; List
@@ -638,24 +604,10 @@ SP.ACL.AFFECTED_SECTIONS="Affected Sections"
 SP.ACL.FRONTEND_PERMISSIONS="Frontend Permissions"
 SP.ACL.BACKEND_PERMISSIONS="Backend Permissions"
 SP.ACL.FORM_SITE_TITLE_EDIT="Editing ACL rule &#34;var:[rule]&#34; "
-SP.ACL.SOBIPRO_ACCESS_CONTROL_LIST="Access Control List"
-SP.ACL.TITLE="Access Control List"
 SP.ACL.JS_MSG_DELETE_ACL_RULE="Are you sure you want to delete this rule?"
 SP.ACL="Access Control List"
 SP.ACL.REG_VISITOR="Regular Visitor (unregistered)"
-SP.ACL.HEADER_RID="Id"
-SP.ACL.HEADER_TOGGLE="Toggle"
-SP.ACL.HEADER_ORDER_BY_RID="Order by rule Id "
 SP.ACL.HEADER_NAME="Rule Name"
-SP.ACL.HEADER_ORDER_BY_NAME="Order by rule name"
-SP.ACL.HEADER_STATE="State "
-SP.ACL.HEADER_ORDER_BY_STATE="Order by rule state"
-SP.ACL.HEADER_VALIDSINCE="Valid since"
-SP.ACL.HEADER_ORDER_BY_VALIDSINCE="Order rules by the date since the rules are valid "
-SP.ACL.HEADER_VALIDUNTIL="Valid until"
-SP.ACL.HEADER_ORDER_BY_VALIDUNTIL="Order rules by the date until the rules are valid "
-SP.ACL.HEADER_PERMS_COUNT="Number of permissions "
-SP.ACL.HEADER_GROUP_COUNT="Number of affected groups"
 SP.ACL.FORM_SITE_TITLE_ADD="Add new ACL rule "
 SP.ACL.STATE_HEAD="State"
 SP.ACL_FORM_SITE_TITLE_EDIT="ACL - Edit Rule &#34;var:[rule]&#34;"
@@ -680,7 +632,6 @@ SP.PERMISSIONS.PUBLISH_*="publish any"
 ;=========
 ; Category
 ;=========
-;SP.EDIT_CATEGORY="Edit Category &#34;var:[category]&#34;"
 SP.ADD_NEW_CATEGORY="Add New Category"
 SP.JS_SELECT_PARENT_ENTRY="Select Parent Entry"
 SP.CAT.CATEGORY_NAME="Category Name"
