Cleaning texts/3 correction default template installation

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -546,10 +546,16 @@ SP.SECTIONS="Sections"
 SP.SELECT_SECTION="Select section"
 SP.AMN.ENT_CAT="Entries & Categories"
 SP.AMN.ADD_ENTRY="Add Entry"
+SP.AMN.ALL_ENTRIES="All Entries"
+SP.AMN.SEC_CFG="Section Configuration"
+SP.AMN.FIELDS_MAN="Fields Manager"
+SP.AMN.GEN_CFG="General Configuration"
 SP.CPANEL.GCONF="System Settings"
 SP.CPANEL.ACL="Access Control List"
 SP.CPANEL.SAM="Application Manager"
 SP.CPANEL.TMPL="Template Manager"
+SP.GB.ACL="Access Control List"
+SP.GB.APPS="Application Manager"
 SP.MN.ACL="Rules"
 
 ;=========
@@ -633,10 +639,6 @@ SP.PERMISSIONS.PUBLISH_*="publish any"
 ; Category
 ;=========
 SP.ADD_NEW_CATEGORY="Add New Category"
-SP.JS_SELECT_PARENT_ENTRY="Select Parent Entry"
-SP.CAT.CATEGORY_NAME="Category Name"
-SP.CAT.CATEGORY_ALIAS="Category Alias"
-SP.CAT.CATEGORY_PATH="Category Path"
 SP.CAT.SELECT_CATEGORY_PATH="Select Category"
 SP.CAT.CATEGORY_INTROTEXT="Category Introtext"
 SP.CAT.CATEGORY_DESCRIPTION="Category Description"
