Bug #823 Adding new rule creates the same rule....

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,6 +24,12 @@
 ; SobiPro 1.1
 ;=========
 
+SP.EX.APP_UPDATE_DISABLED="Not Applicable"
+SP.APPS.LIST_UPDATES="Core Updates"
+SP.EX.UPDATE_OLD_EXPL="The currently installed version is newer or equal"
+SP.EX.UPDATE_CORE="Update"
+SP.EX.UPDATE_REQUIRED="An update of SobiPro is required"
+
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to."
