Cleaning texts/4 Joomla Menu texts corrected for J2.5/3.0

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -28,36 +28,42 @@
 SOBIPRO="SobiPro"
 COM_SOBIPRO="SobiPro"
 
+SP.SOBI_SECTION="Section, Category or Entry"
+SP.SOBI_SECTION_EXPL="Displays a section, category or entry."
+SP.SOBI_SEARCH="Search"
+SP.SOBI_SEARCH_EXPL="Displays the search form of a selected section."
+SP.SOBI_ADD_FORM="Entry Input"
+SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
+SP.SOBI_USER_LISTING="User Listing"
+SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of a specific user."
+SP.SOBI_DATE_LISTING="Listing by Date"
+SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
+
+SP.SOBI_SELECT_SECTION="Select Section"
+SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to."
+SP.SOBI_SELECT_CATEGORY="Select Category"
+SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target section."
 SP.SOBI_SELECT_ENTRY="Select Entry"
-SP.SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
+SP.SOBI_SELECT_ENTRY_EXPL="Optionally select an entry within the target section."
+
+SP.SOBI_SELECTED_DATE="Selected Date"
+SP.SOBI_SELECTED_OBJECT="Selected"
+SP.SOBI_TPL_OVERRIDE="Template Override"
+SP.SOBI_TPL_OVERRIDE_EXPL="You can select an individual template for this link"
+
 SP.SOBI_CLOSE_WINDOW="Close"
-SP.SOBI_SELECT_ENTRY_TYPE="Type something…"
+SP.SOBI.JMENU_SAVE="Save Selection"
+SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
 SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Type the entry title/name"
+
 SP.OTYPE_ENTRY="Entry"
 SP.OTYPE_CATEGORY="Category"
 SP.OTYPE_SECTION="Section"
+
 SP.TASK_SEARCH="Search"
 SP.TASK_ENTRY.ADD="Add New"
-SOBI_SELECTED_OBJECT="Selected"
-SOBI_TPL_OVERRIDE="Template Override"
-SOBI_TPL_OVERRIDE_EXPL="You can select an individual template for this link"
 SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
 SP.TASK_LIST.USER="User Listing"
 SP.TASK_LIST.DATE="Listing by Date"
-SOBI_SELECTED_DATE="Selected Date"
 
-JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
-SOBI_SECTION="SobiPro Section, Category or Entry"
-SOBI_SECTION_EXPL="Add a new link to SobiPro Section, Category or Entry"
-SOBI_SEARCH="Search Function"
-SOBI_SEARCH_EXPL="Add link to the search function of a selected section"
-SOBI_ADD_FORM="Add Entry Form"
-SOBI_ADD_FORM_EXPL="Add link to the add entry form of a selected section"
-SP.SOBI_SELECT_SECTION="Select Section"
-SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to"
-SP.SOBI_SELECT_CATEGORY="Select Category"
-SP.SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
-SOBI_USER_LISTING="User Listing"
-SOBI_USER_LISTING_EXPL="List of 'my' entries"
-SOBI_DATE_LISTING="Listing by date"
-SOBI_DATE_LISTING_EXPL="List of entries created within a certain time period"
+;JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
