--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -104,4 +104,4 @@ SP.REQ.SQLITE_AVAILABLE="SQLite support is available"
 SP.REQ.SQLITE_NOT_AVAILABLE="SQLite support is not available but highly recommended"
 SP.REQ.FILTER_AVAILABLE="Filter functions are available"
 SP.REQ.FILTER_NOT_AVAILABLE="Filter functions are not available"
-
+SP.REQ.CURL_NOT_USABLE="CURL not usable. Some functionality will be disturbed."
