--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -21,23 +21,13 @@
 ; $HeadURL$
 
 
-SP.JS_SELECT_CATEGORY="Select category"
-SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select section first."
+;SP.JS_SELECT_CATEGORY="Select category"
+SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select a section first."
 SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section."
 SP.JS_PROGRESS_WORKING="Working ..."
-SP.JS_PROGRESS_DONE_REDIRECTING="All done. Please wait - refreshing page"
-
-;=========
-; SobiPro 1.0 RC4
-;=========
+SP.JS_PROGRESS_DONE_REDIRECTING="All done. Please wait - refreshing page..."
 SP.JS_ACL_NONREG_ADM_WARN="Are you sure that you want to give administrative permissions to an un-registered user?"
-
-;=========
-; SobiPro 1.0 RC3
-;=========
 SP.JS_SAVE_AS_TEMPL_FILE="Name of the new file"
-
-;=========
 SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
 SP.JS_CLONE_TEMPL="Please enter a new name for the new template"
 SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
@@ -59,8 +49,6 @@ SP.JS_GRP_DEL_WARN="Are you sure you want to delete this group? All values withi
 SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field"
 SP.JS_EDIT_FILTER="Edit Filter"
 SP.JS_DELETE_FILTER="Delete"
-SP.JS_FM_TEXTAREA_WYSIWYG_NOLIMIT_WARN="You cannot limit the length of a textarea field when the WYSIWYG editor is enabled. If you want to enable the editor, the max. length limit will be disabled."
-SP.JS_FM_TEXTAREA_WYSIWYG_NOLIMIT_WARN2="You cannot limit the length of a textarea field when the WYSIWYG editor is enabled. If you want to limit the length, the editor must be disabled."
 SP.JS_PBY_NO="Please don't forget to donate! :)"
 SP.JS_CHECKING_FOR_UPDATES="Please wait, checking for updates ..."
 SP.JS_NO_REPO="Please add the URL of a repository first"
