Joomla Menu layout/1

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -48,8 +48,8 @@
 ;SOBI_SEARCH_EXPL="Displays the search form of a selected section."
 ;SOBI_ADD_FORM="Entry Input"
 ;SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section"
-;SOBI_USER_LISTING="User Listing"
-;SOBI_USER_LISTING_EXPL="Displays the list of entries of a specific user."
+;SOBI_USER_LISTING="User Listings"
+;SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
 ;SOBI_DATE_LISTING="Listing by date"
 ;SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
 
@@ -903,6 +903,7 @@ SP.CPANEL.SAM="Application Manager"
 SP.CPANEL.TMPL="Template Manager"
 SP.GB.ACL="Access Control List"
 SP.GB.APPS="Application Manager"
+SP.EX.MANAGER="Application Manager"
 SP.MN.ACL="Rules"
 
 ;; List
