--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -34,8 +34,8 @@ SP.SOBI_SEARCH="Search"
 SP.SOBI_SEARCH_EXPL="Displays the search form of a selected section."
 SP.SOBI_ADD_FORM="Entry Input"
 SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
-SP.SOBI_USER_LISTING="User Listing"
-SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of a specific user."
+SP.SOBI_USER_LISTING="User Listings"
+SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
 SP.SOBI_DATE_LISTING="Listing by Date"
 SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
 
@@ -46,15 +46,16 @@ SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target sec
 SP.SOBI_SELECT_ENTRY="Select Entry"
 SP.SOBI_SELECT_ENTRY_EXPL="Optionally select an entry within the target section."
 
-SP.SOBI_SELECTED_DATE="Selected Date"
+SP.SOBI_SELECT_DATE="Select Date"
 SP.SOBI_SELECTED_OBJECT="Selected"
 SP.SOBI_TPL_OVERRIDE="Template Override"
-SP.SOBI_TPL_OVERRIDE_EXPL="You can select an individual template for this link"
+SP.SOBI_TPL_OVERRIDE_EXPL="Select a template for that view."
+SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
 
 SP.SOBI_CLOSE_WINDOW="Close"
 SP.SOBI.JMENU_SAVE="Save Selection"
 SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
-SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Type the entry title/name"
+SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
 
 SP.OTYPE_ENTRY="Entry"
 SP.OTYPE_CATEGORY="Category"
@@ -62,8 +63,7 @@ SP.OTYPE_SECTION="Section"
 
 SP.TASK_SEARCH="Search"
 SP.TASK_ENTRY.ADD="Add New"
-SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
-SP.TASK_LIST.USER="User Listing"
+SP.TASK_LIST.USER="User Listings"
 SP.TASK_LIST.DATE="Listing by Date"
 
 ;JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
