--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -179,10 +179,10 @@ SP.EN.IS_CHECKED_OUT="Entry '%s' is currently being edited by another user."
 SP.FD.DELETED="Field 'var:[field]' has been deleted."
 SP.FD.MAIL_EMAIL_ADDRESS="Email address"
 SP.FD.IMG_DELETE_CURRENT_IMAGE="Delete current image"
-SP.FD.SEARCH_SELECT_LIST=" --- Select var:[name]  --- "
-SP.FD.SEARCH_SELECT_LABEL=" --- select --- "
+SP.FD.SEARCH_SELECT_LIST=" -- Select var:[name]  -- "
+SP.FD.SEARCH_SELECT_LABEL=" -- select --- "
 SP.FD.SELECT_OPTION_NAME="Option Name"
-SP.FD.INBOX_SEARCH_SELECT=" --- Select var:[name]  --- "
+SP.FD.INBOX_SEARCH_SELECT=" -- Select var:[name]  -- "
 
 
 ;=========
