Joomla Menu layout/1

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -26,7 +26,7 @@
 ;=========
 
 ; Joomla! Menu (all)
-;SP.SOBI_SELECT_SECTION="Select Section"
+SP.SOBI_SELECT_SECTION="Select Section"
 ;SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to."
 ;SP.SOBI_SELECT_CATEGORY="Select Category"
 ;SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target section."
