--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -40,6 +40,7 @@ SP.SOBI_DATE_LISTING="Listing by Date"
 SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
 
 SP.SOBI_SELECT_SECTION="Select Section"
+SOBI_SELECT_SECTION="Select Section"
 SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to."
 SP.SOBI_SELECT_CATEGORY="Select Category"
 SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target section."
