default value for en-gb preload Cleaning texts/5

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -25,8 +25,23 @@
 ; SobiPro 1.1.0
 ;=========
 
-; Joomla! Menu (all)
 SP.SOBI_SELECT_SECTION="Select Section"
+SOBI_SELECT_SECTION="Select Section"
+
+
+; Joomla! Menu (J 1.5)
+;COM_SOBIPRO="SobiPro"
+SP.SOBI_SECTION="Section, Category or Entry"
+SP.SOBI_SECTION_EXPL="Displays a section, category or entry."
+SP.SOBI_SEARCH="Search"
+SP.SOBI_SEARCH_EXPL="Displays the search form of a selected section."
+SP.SOBI_ADD_FORM="Entry Input"
+SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
+SP.SOBI_USER_LISTING="User Listings"
+SP.SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
+SP.SOBI_DATE_LISTING="Listing by Date"
+SP.SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
+
 ;SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to."
 ;SP.SOBI_SELECT_CATEGORY="Select Category"
 ;SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target section."
@@ -40,18 +55,17 @@ SP.SOBI_SELECT_SECTION="Select Section"
 ;SOBI_SELECT_CATEGORY="Select Category"
 ;SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
 
-; Joomla! Menu (J 1.5)
-;COM_SOBIPRO="SobiPro"
-;SOBI_SECTION="Section, Category or Entry"
-;SOBI_SECTION_EXPL="Displays a section, category or entry."
-;SOBI_SEARCH="Search"
-;SOBI_SEARCH_EXPL="Displays the search form of a selected section."
-;SOBI_ADD_FORM="Entry Input"
-;SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section"
-;SOBI_USER_LISTING="User Listings"
-;SOBI_USER_LISTING_EXPL="Displays the list of entries of the logged in user."
-;SOBI_DATE_LISTING="Listing by date"
-;SOBI_DATE_LISTING_EXPL="Displays the list of entries created within a certain time period."
+; SobiPro Modules
+SP.SEC.CFG.ENTRY_ORDER_BY_POSITION_ASCENDING="Position ascending"
+SP.SEC.CFG.ENTRY_ORDER_BY_POSITION_DESCENDING="Position descending"
+SP.SEC.CFG.ENTRY_ORDER_BY_POPULARITY_ASCENDING="Least popular first"
+SP.SEC.CFG.ENTRY_ORDER_BY_POPULARITY_DESCENDING="Most popular first"
+SP.SEC.CFG.ENTRY_ORDER_BY_CREATION_DATE_ASC="Oldest first"
+SP.SEC.CFG.ENTRY_ORDER_BY_CREATION_DATE_DESC="Newest first"
+SP.SEC.CFG.ENTRY_ORDER_BY_UPDATE_DATE_ASC="Least recently modified first"
+SP.SEC.CFG.ENTRY_ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
+SP.SEC.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_ASC="Expires next first"
+SP.SEC.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
 
 ; General texts
 SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields."
