--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -85,6 +85,7 @@ SP.KEYS="Keys"
 SP.DESCRIPTION="Description"
 SP.ROBOTS="Robots"
 SP.ROBOTS_NONE="none specified"
+SP.FILTER="Filter..."
 SP.PUBLISHED="Published"
 SP.ENTRY_NO_NAME="No name"
 SP.PN.STARTICON="<i class='icon-fast-backward'></i>"
