--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -561,7 +561,7 @@ SP.CRAWLER.SITE_TITLE="Section Crawler"
 SP.CRAWLER.MENU="Section Crawler"
 SP.TB.START_CRAWL="Crawl"
 SP.TB.RESTART_CRAWL="Clean Cache & Crawl"
-SP.CRAWL_ULR="Parsed URL"
+SP.CRAWL_URL="Parsed URL"
 SP.CRAWL_CODE="Response Code"
 SP.CRAWL_LINKS="Found Links"
 SP.CRAWL_TIME="Request Time"
