--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -706,6 +706,7 @@ SP.EX.APP_DISABLED="Application \"%s\" has been disabled."
 SP.EX.HEADER_NAME="Application Name"
 SP.EX.HEADER_TYPE="Type"
 SP.EX.APPLICATION_TYPE="application"
+SP.EX.GLOBAL_APPLICATION_TYPE="global application"
 SP.EX.NOT_APPLICABLE="Not applicable: This application type cannot be disabled!"
 SP.APPS.LIST_APPS="Applications"
 SP.APPS.LIST_FIELDS="Fields"
