Alpha W Bank Payment renamed to Offline Payment

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -257,5 +257,5 @@ SP.TP.PAYMENT_ADD="Click the checkbox on the left side if you wish to activate t
 ;=========
 ; Applications
 ;=========
-SP.APP.PBT.PAY_TITLE="Pay with bank transfer"
+SP.APP.PBT.PAY_TITLE="Pay offline"
 SP.APP.PPP.PAY_TITLE="Pay with PayPal"
