--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -800,11 +800,11 @@ SP.AMN.APPS="Applications"
 SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section."
 SP.UPD.UPDATE_AVAILABLE="New version %s is available"
 SP.UPD.UP_TO_DATE="Current version is up to date"
-SP.APP.BANK_TRANSFER="Bank Payment"
+SP.APP.BANK_TRANSFER="Offline Payment"
 SP.APP.PAYPAL="PayPal Payment"
-SP.APP.BANK_TRANSFER_NAME="Bank Payment Settings"
-SP.APP.BANK_TRANSFER_DATA="Bank Account/eCheck Data"
-SP.APP.BANK_TRANSFER_DATA_EXPL="Enter the data of your bank account with the text that should be presented at the payment screen."
+SP.APP.BANK_TRANSFER_NAME="Offline Payment Settings"
+SP.APP.BANK_TRANSFER_DATA="Offline Account Data"
+SP.APP.BANK_TRANSFER_DATA_EXPL="Enter the data of your offline account with the text that should be presented at the payment screen."
 SP.APP.PPP_NAME="PayPal Payment Settings"
 SP.APP.PPP_URL="Paypal URL"
 SP.APP.PPP_EMAIL="Recipient Email Address"
