error message revision for repo errors

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -27,8 +27,15 @@ SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s."
 SP.CANNOT_CREATE_DIR="Cannot create directory at %s."
 SP.FILTER_NOT_FOUND="Filter cannot be found."
 SP.FIELD_TEXTAREA_LIMIT="You can input a maximum of %d chars into %s field but the current length is %d."
-SP.INVALID_DATE_GIVEN="Invalid date given"
+SP.INVALID_DATE_GIVEN="Invalid date given."
 SP.MISSING_CAT="Category missing! Have you added a category field to the section?"
+SP.NO_CONNECT="Cannot connect to %s. Outgoing access to the Internet is necessary for this function."
+SP.INVALID_URL="The given URL "%s" seems not to be a valid address."
+SP.REPO_ERR="An error has occurred: %s"
+SP.NOT_VALIDATED="The connection could not be validated (error number %s). %s"
+SP.SCHEME_ERR="An error has occurred and the repository at %s could not be added. Could not validate file repository definition against the schema definition at %s."
+SP.PACKAGE_ERR="An error has occurred. No package name received."
+SP.UNKNOWN_ERR="Unknown error occurred."
 
 ;=========
 ; SobiPro 1.0.1
