missing text, default category field size

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -415,6 +415,7 @@ SP.CATN.CATEGORY_PUBLISHING="Publishing"
 SP.CATN.CATEGORY_NAME="Name"
 SP.CATN.CATEGORY_ALIAS="Alias"
 SP.CATN.CATEGORY_PATH="Path"
+SP.CATN.PARSE_CAT_DES="Parse Description"
 SP.CATN.CATEGORY_LOCATION="Category Location"
 SP.CATN.CATEGORY_DATA="Category Data"
 SP.CATN.SELECT_PARENT_BUTTON="Parent Category"
