--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -27,7 +27,7 @@
 SP.INFO_DIFFERENT_LANGUAGE="<strong>Heads up!</strong> You are editing this %s in '%s' language. Please note, that all changes you make will be stored in this language!"
 
 SP.CRAWL_URL_PARSED_DONE="Done. Parsed %d links."
-SP.CRAWL_URL_PARSED_WORKING="Working... Parsed %d from %d sites in this loop."
+SP.CRAWL_URL_PARSED_WORKING="Working... Parsed %d of %d sites in this loop."
 
 ; Template texts
 SP.EXTENDED_SEARCH="Extended Search"
