--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -32,8 +32,9 @@ Legend:
 
    (#) Using method_exists on a string in admin view (Issue #841)
    (#) The requestcache is overriding the global $_REQUEST (Issue #835)
+   (#) XML cache file deletion of non-existent files (Issue #853)
 
-   (-) Image field not storing temporary data while using ajax uploader
+   (-) Image field not storing temporary data any longer while using ajax uploader
    (-) Automatic upload of files in file uploader
 
 
